[tool.poetry]
name = "planteuf"
version = "0.1.0"
description = ""
authors = ["Loaki <loaki.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
typing-extensions = "^4.7.1"
flake8 = "^7.1.1"
flake8-logging-format = "^2024.24.12"
isort = "^5.13.2"
black = "^24.10.0"
mypy = { version = "^1.0", extras = ["dmypy"] }
pre-commit = "^4.0.1"
pydantic = "^2.11.3"
pymongo = "^4.12.0"
python-dotenv = "^1.1.0"
logging = "^0.4.9.6"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2
lines_after_imports = 2
include_trailing_comma = true
line_length = 120
